引用计数法缺陷